--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="material_calendar_today_button">Dnes</string>
     <string name="material_calendar_positive_button">OK</string>
     <string name="material_calendar_negative_button">Zavrieť</string>
+    <string name="string">String</string>
 </resources>
