--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="material_calendar_positive_button">OK</string>
     <string name="material_calendar_negative_button">Zavrieť</string>
     <string name="string">String</string>
+    <string name="citat_viac">Čítať viac</string>
 </resources>
